<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_notify"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="Notify" />
        <item
            android:id="@+id/nav_monitor"
            android:icon="@drawable/ic_menu_send"
            android:title="Monitor" />

        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="History" />
        <item
            android:id="@+id/nav_account"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="Account" />
        <item
            android:id="@+id/nav_changepassword"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Change Password" />
    </group>
</menu>